2004-12-10  Stuart Hastings  <stuart@apple.com>

	Radar 3868767
	* gcc/testsuite/gcc.apple/r3868767.c: New.

2004-12-10  Eric Albert  <ejalbert@apple.com>
	    Stuart Hastings  <stuart@apple.com>

	Radar 3868767
	* gcc/config/i386/darwin.h (ASM_SPEC): -force_cpusubtype_ALL default.
	(TARGET_SUBTARGET_DEFAULT): SSE2 default.
	(SUBTARGET_OVERRIDE_OPTIONS): disable SSE2 if -mmmx or -msse used;
	if -mfpmath not set, default to -mfpmath=sse.
	
2004-11-05  Ziemowit Laski  <zlaski@apple.com>

	<rdar://problem/3867969> False positive on detecting missing [super dealloc]
        * objc/objc-act.c (finish_message_expr, start_method_def): Check for method
	'dealloc' instead of methods beginning with 'dealloc...'.

2004-10-29  Chuck Fleming  <fleming@apple.com>
	    Ziemowit Laski  <zlaski@apple.com>

	<rdar://problem/3721879> gcc should warn when -dealloc methods don't call [super dealloc]
	* objc/objc-act.c (should_call_super_dealloc): New global variable.
	(finish_message_expr): Clear should_call_super_dealloc if calling
	[super dealloc].
	(start_method_def): Set should_call_super_dealloc if defining a 'dealloc'
	method in a non-root class.
	(finish_method_def): If finishing a 'dealloc' method in a non-root class,
	warn if '[super dealloc]' has not been seen.

2004-10-06  Ziemowit Laski  <zlaski@apple.com>

	<rdar://problem/3767166> compiler generates a load from 0x8
	* objc/objc-act.c (objc_substitute_decl): Add missing parenths after
	DECL_NAME accessor.

2004-09-29  Stuart Hastings  <stuart@apple.com>

	<rdar://problem/3819436> binaries built w/-mdynamic-no-pic crash on exit
	* gcc/config/darwin.h (machopic_lazy_symbol_ptr3_section) New.
	* gcc/config/i386/i386.c (output_stub) Use it.
	
2004-09-21  Stuart Hastings  <stuart@apple.com>

	<rdar://problem/3808279> gcc_os-1800 breaks Finder_FE-495
	<rdar://problem/3806628> gcc_os-1800 breaks securityd project
	* gcc/cse.c(cse_insn): check result of force_const_mem before using.
	